# failures-analysis

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yaml  ci.yml
failure_analysis/: __init__.py  drain3.ini  failure_analysis.py
utest/: test.py  test_drain3.py  test_drain3.test_custom_ini.approved.txt  test_drain3.test_template_failures.approved.txt  test_similarity.py  test_similarity.test_console_output.approved.txt  test_similarity.test_console_output_with_drain.approved.txt  test_similarity.test_finding_files.approved.txt
utest/rerources/: failing_02_.xml
utest/resources/: drain3.ini  failing_01_.xml  failing_03_.xml  failing_04_.xml  failing_05_.xml  pass_01_.xml
utest/utest/output/: pytest-logs.txt
