[tool.poetry]
name = "failures-analysis"
version = "2.0.4"
description = " failures-analysis package provides fast and reliable way to find and group similar failures in test automation."
authors = ["Tatu Aalto"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/F-Secure/failures-analysis"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]
packages = [
    { include = "failure_analysis", from="."}
]

[tool.poetry.scripts]
failures-analysis = "failure_analysis.failure_analysis:main"

[tool.poetry.urls]
"Change log" = "https://github.com/F-Secure/failures-analysis/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
lxml = "^4.9.1"
drain3 = "^0.9.11"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
invoke = "^1.7.3"
mypy = "^0.991"
flake8 = "^5.0.4"
python-semantic-release = "7.32.2"
approvaltests = "^7.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.semantic_release]
version_toml  = [
    "pyproject.toml:tool.poetry.version",
    "failure_analysis/__init__.py:__version__"
]
branch = "main"
build_command = "poetry build"

[tool.pytest.ini_options]
console_output_style = "count"
log_cli = true
log_cli_level = "DEBUG"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_file = "utest/output/pytest-logs.txt"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_file_level = "DEBUG"
