[tool.poetry]
name = "failures-analysis"
version = "2.1.0"
description = " failures-analysis package provides fast and reliable way to find and group similar failures in test automation."
authors = ["Tatu Aalto"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/F-Secure/failures-analysis"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]
packages = [
    { include = "failure_analysis", from="."}
]

[tool.poetry.scripts]
failures-analysis = "failure_analysis.failure_analysis:main"

[tool.poetry.urls]
"Change log" = "https://github.com/F-Secure/failures-analysis/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pandas = "^1.5.3"
lxml = "^4.9.2"
drain3 = "^0.9.11"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
isort = "^5.12.0"
invoke = "^1.7.3"
mypy = "^1.0"
flake8 = "^5.0.4"
python-semantic-release = "9.1.1"
approvaltests = "^8.2.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.semantic_release]
version_toml  = [
    "pyproject.toml:tool.poetry.version",
    "failure_analysis/__init__.py:__version__"
]
branch = "main"
build_command = "poetry build"

[tool.pytest.ini_options]
console_output_style = "count"
log_cli = true
log_cli_level = "DEBUG"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_file = "utest/output/pytest-logs.txt"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_file_level = "DEBUG"
